@@ -223,7 +223,7 @@ public final class PaymentsEditor extends javax.swing.JPanel implements EditorRe
             if (d == null) {
                 return null;
             } else if (d.doubleValue() < 0.0) {
-                return new Double(-d.doubleValue());
+                return Double.valueOf(-d.doubleValue());
             } else {
                 return d;
             }
@@ -235,14 +235,14 @@ public final class PaymentsEditor extends javax.swing.JPanel implements EditorRe
         }
         @Override
         public Double positivize(Double d) {
-            return d == null ? null : new Double(-d.doubleValue());
+            return d == null ? null : Double.valueOf(-d.doubleValue());
         }
         @Override
         public Double addSignum(Double d) {
             if (d == null) {
                 return null;
             } else if (d.doubleValue() > 0.0) {
-                return new Double(-d.doubleValue());
+                return Double.valueOf(-d.doubleValue());
             } else {
                 return d;
             }
