@@ -117,7 +117,7 @@ public class JPaymentPaper extends javax.swing.JPanel implements JPaymentInterfa
             m_dTicket = value;
         } 
         
-        m_jMoneyEuros.setText(Formats.CURRENCY.formatValue(new Double(m_dTicket)));
+        m_jMoneyEuros.setText(Formats.CURRENCY.formatValue(Double.valueOf(m_dTicket)));
         
         int iCompare = RoundUtils.compare(m_dTicket, m_dTotal);
         
