@@ -171,7 +171,7 @@ public class PaymentInfoCash extends PaymentInfo {
      * @return
      */
     public String printChange() {
-        return Formats.CURRENCY.formatValue(new Double(m_dPaid - m_dTotal));
+        return Formats.CURRENCY.formatValue(Double.valueOf(m_dPaid - m_dTotal));
     }
 
 }
