@@ -36,7 +36,7 @@ public class ScaleFake implements Scale {
      */
     @Override
     public Double readWeight() throws ScaleException {
-        return new Double(Math.random() * 2.0);
+        return Double.valueOf(Math.random() * 2.0);
     }
     
 }
